layout shift fix

--- a/src/components/mainpage/mainpage.css
+++ b/src/components/mainpage/mainpage.css
@@ -1,7 +1,6 @@
 .main-container {
-    /* border: 1px solid red; */
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     padding: 6rem 20% 6rem 20%;
 }
 .dimmed-screen {
